# cvtranslator

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  GlobalMouseEvent.h  WinMouseEventPublisher.cpp  WinMouseEventPublisher.h  WorkWindow.cpp  WorkWindow.h  WorkWindow.ui  main.cpp
